--- a/template/index.html
+++ b/template/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <!-- built files will be auto injected123456789 -->
+    <!-- built files will be auto injected -->
   </body>
 </html>
